--- a/style/project_typography.less
+++ b/style/project_typography.less
@@ -1,29 +1,29 @@
 @import 'global';
 
 h1 {
-  font-size: 24pt;
-  line-height: 38px;
+  font-size: 30pt;
+  line-height: 52px;
+  padding-bottom: 38px;
   font-weight: 300;
   font-family: 'Raleway', sans-serif;
 }
 
 h2 {
-  font-size: 14pt;
+  font-size: 1.5em;
   line-height: 57px;
   padding-top: 19px;
-  font-variant: small-caps;
-  letter-spacing: .12em;
-  font-weight: 600;
+  padding-bottom: 19px;
   color: @primary-color;
+  font-family: 'Raleway', sans-serif;
 }
 
 h3 {
-  font-size: 14pt;
-  line-height: 28px;
-  font-weight: 400;
-  color: rgb(150, 150, 150);
+  font-size: 1em;
+  color: @primary-color;
+  line-height: 22px;
+  padding-top: 19px;
+  padding-bottom: 19px;
   font-family: 'Raleway', sans-serif;
-  line-height: 38px;
 }
 
 .content {
