improved lists globally

--- a/style/project_typography.less
+++ b/style/project_typography.less
@@ -109,15 +109,13 @@ p {
 .article_list {
   list-style: disc outside;
   padding-left: 2em;
-  margin: 0;
+  margin-bottom: 19px;
 
   li {
     font-size: 1em;
-    line-height: 19px;
-    font-weight: 400;
+    line-height: 22px;
     color: rgb(70, 70, 70);
     font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    margin-bottom: 0.5em;
   }
 }
 
