--- a/style/project_typography.css
+++ b/style/project_typography.css
@@ -89,15 +89,13 @@ p {
 .article_list {
   list-style: disc outside;
   padding-left: 2em;
-  margin: 0;
+  margin-bottom: 19px;
 }
 .article_list li {
   font-size: 1em;
-  line-height: 19px;
-  font-weight: 400;
+  line-height: 22px;
   color: #464646;
   font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin-bottom: 0.5em;
 }
 .definitions {
   font-size: 10pt;
