--- a/style/fancybox_styling.css
+++ b/style/fancybox_styling.css
@@ -18,3 +18,40 @@
 .fancybox-prev {
     left: -60px;
 }
+
+/* fancybox 3 customization */
+
+.fancybox-caption-wrap {
+    height: 64px;
+    padding: 0 30px 0;
+    background: none;
+    background-color: white;
+}
+
+.fancybox-caption {
+    padding: 12px 0;
+    border-top: 1px solid #c1c1c1;
+    color: black;
+    line-height: 20px;
+}
+
+.fancybox-bg{
+    background-color: white;
+    opacity: 1 !important;
+}
+
+.fancybox-button--left {
+    border-bottom-left-radius: 0px;
+}
+
+.fancybox-button--right {
+    border-bottom-right-radius: 0px;
+}
+
+.fancybox-image-with-border{
+    border : 1px solid #c1c1c1;
+}
+
+.slick-slide:focus, a {
+     outline: none;
+}
