--- a/style/projects.less
+++ b/style/projects.less
@@ -19,9 +19,11 @@
 }
 
 #projects_list {
+  margin-top: 19px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-bottom: 19px;
 
   .project {
     position: relative;
@@ -45,7 +47,7 @@
       width: 200px;
       height: 200px;
 
-      border: 1px solid @primary-color;
+      border: 1px solid lightgrey;
       box-sizing: border-box;
 
       a {
