--- a/style/projects.less
+++ b/style/projects.less
@@ -19,7 +19,6 @@
 }
 
 #projects_list {
-  margin-top: 19px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -28,7 +27,7 @@
   .project {
     position: relative;
     width: 200px;
-    height: 300px;
+    height: 320px;
 
     @media screen and (min-width: @responsive-threshold) {
       margin-right: 40px;
@@ -63,6 +62,18 @@
       font-family: "Open Sans", Arial, sans-serif;
       font-size: 12pt;
       line-height: 19px;
+
+      .primary{
+          font-weight: 500;
+          font-size: 14pt;
+          margin-bottom: 8px;
+      }
+
+      .secondary{
+        font-weight: 400;
+        font-size: 11pt;
+        color: gray;
+      }
     }
   }
 
@@ -108,4 +119,21 @@
   vertical-align: middle;
   width: 100%;
   position: static;
+}
+
+#separator {
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid #dddddd;
+  line-height: 0.1em;
+  margin: 10px 0 60px;
+}
+
+#separator_text {
+  color: #bebebe;
+  font-style: italic;
+  font-size: 10pt;
+  font-weight: 300;
+  background:#fff;
+  padding:0 15px;
 }
