--- a/style/projects.css
+++ b/style/projects.css
@@ -2,10 +2,10 @@
   margin: 0 auto 3rem;
 }
 #projects_list .project .content .title {
-  font-size: 1.55rem;
-  line-height: 1.55rem;
+  font-size: 2rem;
+  line-height: 2rem;
   letter-spacing: 0.05rem;
-  border-bottom: calc(5px) solid #a227be;
+  border-bottom: 7px solid #a227be;
 }
 #projects_list .project .content .tagline {
   font-size: 1rem;
